# mctext

./: AUTHORS  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  filelist  main.cpp  text_generator.cpp  text_generator.h
