# Process this file with autoconf to produce a configure script.
AC_INIT(mctext, 0.1, guyrutenberg@gmail.com)
AC_CONFIG_SRCDIR(main.cpp)
#AC_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
